# ASOC-ROMA

./: .gitmodules  0629-asoc-outdoor.xml  10_sl_1.yaml  10_sl_ug_1.yaml  2021-09-01-14-22-17.bag  2021-09-01-14-27-02.bag  2021-09-06-20-32-11.bag  20_1.yaml  20_sl_1.yaml  20_sl_ug_2.yaml  20_sl_ug_cross_3.yaml  30_sl_ug_cross_2.yaml  35_sl2_2.yaml  35_sl_1.yaml  35_sl_ug_cross_3.yaml  38_sl_ug_4.yaml  38_sl_ug_5.yaml  38_sl_ug_cross_1.yaml  42_sl_ug_2.yaml  GPS_test_2021-12-08-17-43-46.bag  GPS_test_2021-12-08-17-47-43.bag  GPS_test_2021-12-08-17-48-01.bag  LICENSE  README.en.md  README.md  Spwan_robot_README.txt  a.yaml  asoc_base_outdoor.sh  asoc_indoor_ployjuggler.xml  asoc_leg_ployjuggler.xml  asoc_leg_ployjuggler_v2.xml  asoc_leg_ployjuggler_v3.xml  asoc_leg_ployjuggler_v4.xml  asoc_leg_ployjuggler_v4_tmotor.xml  asoc_leg_ployjuggler_v4_vel_step.xml  asoc_lower_controller.sh  asoc_lower_controller_README.txt  asoc_lower_platform.sh  asoc_outdoor_ployjuggler.xml  asoc_rosbag.sh  (+14 more)
apps/: asoc-controller.desktop  asoc-outdoor.desktop  asoc-platform.desktop  asoc-rosbag.desktop  asoc-tmotor.desktop
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/RT500/: rtk_test
devel/lib/cantest/: canTest1  canTest2  canTest3  canTest4
devel/lib/pkgconfig/: RT500.pc  cantest.pc  path_load.pc  wt906.pc
devel/lib/wt906/: main_cpp
params/: 10_1.yaml  10_sl_ug_cross_1.yaml  20_2.yaml  20_sl_ug_1.yaml  20_sl_ug_cross_1.yaml  20_sl_ug_cross_2.yaml  30_4.yaml  30_para_1.yaml  30_para_2.yaml  30_sl_ug_1.yaml  30_sl_ug_2.yaml  30_sl_ug_3.yaml  30_sl_ug_4.yaml  30_sl_ug_cross_3.yaml  30_turn_x.yaml  30_x_1.yaml  35_1.yaml  35_2.yaml  35_sl_ug_cross_1.yaml  35_sl_ug_cross_2.yaml  38_sl_ug_1.yaml  38_sl_ug_2.yaml  38_sl_ug_3.yaml  38_sl_ug_cross_2.yaml  42_sl_ug_1.yaml
src/: README.md
src/RT500/: CMakeLists.txt
src/RT500/launch/: RTK_1.launch
src/SpimTest/: CMakeLists.txt  package.xml
src/SpimTest/launch/: asoc_encoder.launch
src/SpimTest/src/: demo1.cpp
src/asoc_lower_controller/: CMakeLists.txt  package.xml  readme.md
src/asoc_lower_controller/launch/: asoc_lower_controller.launch  asoc_lower_platform.launch
src/asoc_lower_controller/src/: asoc_lower_controller.cpp  asoc_lower_controller1.cpp  asoc_lower_controller_angle.cpp  asoc_lower_platform.cpp  canTest1.cpp  canTest3_8angle.cpp  canTest5s_body.cpp  canTestPD.cpp  encoder_can0.cpp  encoder_cantest.cpp  stick_control.cpp
src/asoc_lower_controller/src/include/: asoc_lower_platform.hpp
src/asoc_upper_controller/: CMakeLists.txt  package.xml  paraset.txt
src/asoc_upper_controller/cfg/: upper_controller.cfg
src/asoc_upper_controller/launch/: asoc_base.launch  asoc_base_indoor.launch  asoc_base_outdoor.launch  asoc_control.launch  asoc_control_anti.launch  asoc_control_anti_Tmotor.launch  asoc_control_anti_indoor.launch  asoc_control_anti_outdoor.launch  asoc_control_front.launch  asoc_control_ug.launch  asoc_control_xbox.launch  imu_test.launch
src/asoc_upper_controller/src/: upper_controller.cpp  upper_controller.hpp  upper_controller_angle.cpp  upper_controller_anti.cpp  upper_controller_anti2 _simple.cpp  upper_controller_anti2.cpp  upper_controller_anti3.cpp  upper_controller_anti_Tmotor.cpp  upper_controller_anti_outdoor.cpp  upper_controller_anti_rec.cpp  upper_controller_anti_simple.cpp  upper_controller_front.cpp  upper_controller_iit.cpp  upper_controller_noturn.cpp  upper_controller_outdoor.cpp  upper_controller_turnstraight.cpp  upper_controller_xbox.cpp
src/asoc_upper_controller/src/include/: upper_controller.hpp  upper_controller_outdoor.hpp  upper_controller_simple.hpp  upper_controller_v2.hpp  upper_controller_v3.hpp  upper_controller_v4.hpp
src/canTest/src/: canTest2_angle.cpp  canTest2copy.cpp  canTest3_angle.cpp  canTest3copy.cpp  canTest4copy.cpp  canTest5.cpp  canTest5s.cpp  canTest5s_body.cpp  canTest_single.cpp  canTest_slim.cpp  motor_encoder.cpp
src/localization/: CMakeLists.txt
src/localization/launch/: ekf.launch
src/localization/params/: ekf_params_encoder.yaml
src/localization/rviz/: navigation.rviz
src/outdoor_localization/: package.xml
src/outdoor_localization/params/: ekf_params_encoder.yaml
src/outdoor_localization/rviz/: navigation.rviz
src/path_load/launch/: path.launch
src/path_load/src/: data.csv  data_05.csv  data_small.csv  parallelogram.csv  path_load.py  square_curve.csv  tiny.csv
src/rt500/: CMakeLists.txt  package.xml
src/rt500/msg/: RTK.msg
src/rt500/src/: rtk_pub.py
src/rtk-bnav/: CMakeLists.txt
src/rtk-bnav/src/: rtk_pub.py
src/spi-encoder/: CMakeLists.txt  README.md  package.xml
src/spi-encoder/launch/: asoc_encoder.launch
src/spi-encoder/png/: Thumbs.db
src/spi-encoder/src/: demo1.cpp
src/tmotor_leg/: CMakeLists.txt  README.MD  Tmotor 技术文档.docx  package.xml
src/tmotor_leg/launch/: tmotor2_uppercontroller1.launch  tmotor3_singletest.launch  tmotor_IMU.launch  tmotor_auto_control.launch  tmotor_auto_indoor.launch  tmotor_control.launch  tmotor_control_noxbox.launch  tmotor_controller3.launch  tmotor_controller_xbox.launch  tmotor_single.launch  tmotor_vel_pos.launch  tmotor_xbox.launch
src/tmotor_leg/src/: joytest1.cpp  rostest1.cpp  rostest2.cpp  rostest3.cpp  rostest4.cpp  rostest5.cpp  tmotor2_singletest1.cpp  tmotor2_uppercontroller1.cpp  tmotor2_xboxtest1.cpp  tmotor3_singletest.cpp  tmotor_auto.cpp  tmotor_controller.cpp  tmotor_controller2.cpp  tmotor_controller3.cpp  tmotor_controller4.cpp  tmotor_controller5.cpp  tmotor_controller_new.cpp  tmotor_controller_uppercontroller.cpp  tmotor_controller_xbox.cpp  tmotor_imu.cpp  tmotor_joy.cpp  tmotor_rp_test.cpp  tmotor_single_test.cpp  tmotor_springtest1.cpp  tmotor_springtest2.cpp  tmotor_test.cpp  tmotor_vel_pos.cpp  tmotor_vel_pos2.cpp  tmotor_vel_pos3.cpp  tmotor_vel_posxg1.cpp  tmotortest1.cpp  tmotortest2.cpp  tmotortest3.cpp
src/tmotor_leg/src/include/: tmotor_common.hpp  tmotor_common2.hpp
src/wt931/: CMakeLists.txt  package.xml
src/wt931/include/: ImuController.h
src/wt931/launch/: Wt906.launch  Wt906_0.launch  Wt906_1.launch  Wt906_2.launch  (+1 more)
(+8 files in other folders)
